--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -23,12 +23,40 @@
 					</td>
 					<td><%= link_to @book.title, book_path(@book) %></td>
 					<td><%= @book.body %></td>
+					
+					<!--いいね-->
+					
+					<td>コメント数:<%= @book.book_comments.count %></td>
 					<% if @user.id == current_user.id %>
               		<td><%= link_to "Edit", edit_book_path(@book), class: "btn-sm btn-success edit_book_#{@book.id}" %></td>
 					<td><%= link_to "Destroy", book_path(@book), method: :delete, data: {confirm: "本当に削除してもよろしいですか？"}, class: "btn-sm btn-danger destroy_book_#{@book.id}" %></td>
             		<% end %>
 				</tr>
-			</table>
+		</table>
+		
+		<% @book_comments.each do |book_comment| %>
+			<div class="row">
+				<div class = "col-xs-9">
+					<%= book_comment.comment %>
+				</div>
+				<div class = "col-xs-3">
+	       			<% if book_comment.user == current_user %>
+	        			<div>
+	            			<%= link_to "Destroy", book_book_comment_path(book_comment.book, book_comment), method: :delete, class: "btn btn-danger pull-right" %>
+	        			</div>
+	        		<% end %>
+	        	</div>
+	        </div>
+        <% end %>
+          	
+		<%= form_with(model:[@book, @book_comment], local: true) do |f| %>
+  		<!--<div class="row">-->
+    		<div class="col-sm-12">
+     		 <%= f.text_area :comment, rows:'5', class: "form-control" %>
+    		</div>
+  		<!--</div>-->
+  		<%= f.submit "送信", class: "btn btn-sm btn-base-1 mt-20 pull-right" %>
+		<% end %>
 
 	</div>
 </div>
