--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,6 +18,9 @@
 @import "bootstrap";
 // @import "protospace";
 
+// @import "font-awesome-sprockets";
+// @import "font-awesome";
+
 header{
 	color:white;
 	.navbar-left{
