--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -24,7 +24,23 @@
 					<td><%= link_to @book.title, book_path(@book) %></td>
 					<td><%= @book.body %></td>
 					
-					<!--いいね-->
+					<td>
+						<% if @book.favorited_by?(current_user) %>
+							<li>
+								<%= link_to book_favorites_path(@book), method: :delete do %>
+									<i class="fa fa-heart like-btn" aria-hidden="true" style="color: red;"></i>
+    								<%= @book.favorites.count %> いいね
+								<% end %>
+							</li>
+						<% else %>
+							<li>
+								<%= link_to book_favorites_path(@book), method: :post do %>
+    								<i class="fa fa-heart-o" aria-hidden="true"></i>
+    								<%= @book.favorites.count %> いいね
+								<% end %>
+							</li>
+						<% end %>
+					</td>
 					
 					<td>コメント数:<%= @book.book_comments.count %></td>
 					<% if @user.id == current_user.id %>
