--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,7 @@
 	<div class="col-xs-3">
 		<h2>User info</h2>
 		<%= render 'users/profile', user: @user %>
-
+		<%= render 'relationships/follower_button', user: @user %>
 		<h2>New book</h2>
 		<%= render 'books/form', book: @book %>
 	</div>
