--- a/app/views/relationships/_follower_button.html.erb
+++ b/app/views/relationships/_follower_button.html.erb
@@ -2,12 +2,12 @@
   <% if current_user.followeruser?(user) %>
     <%= form_for(current_user.relationships.find_by(follower_id: user.id), html: { method: :delete }) do |f| %>
       <%= hidden_field_tag :follower_id, user.id %>
-      <%= f.submit 'Unfollower', class: 'btn btn-danger btn-block' %>
+      <%= f.submit 'フォロー外す', class: 'btn btn-danger' %>
     <% end %>
   <% else %>
     <%= form_for(current_user.relationships.build) do |f| %>
       <%= hidden_field_tag :follower_id, user.id %>
-      <%= f.submit 'Follower', class: 'btn btn-primary btn-block' %>
+      <%= f.submit 'フォローする', class: 'btn btn-primary' %>
     <% end %>
   <% end %>
 <% end %>
