--- a/app/views/users/show_followed.html.erb
+++ b/app/views/users/show_followed.html.erb
@@ -1,12 +1,24 @@
 <h3>Follower Users</h3>
-  <% @user.follower_user.where.not(id: current_user.id).each do |user| %>
-    <p>
-      <%= "id: #{user.id} email: #{user.email}" %>
-      <% if current_user.following?(user) %>
-        <%= link_to 'フォロー外す', unfollow_path(user.id), method: :POST %>
-      <% else %>
-        <%= link_to 'フォローする', follow_path(user.id), method: :POST %>
-      <% end %>
-      <%= link_to "show", user_path(user) %>
-    </p>
+<table class="table table-hover table-inverse">
+	<thead>
+		<tr>
+			<th>image</th>
+			<th>name</th>
+			<th></th>
+			<th></th>
+			<th></th>
+			<th colspan="3"></th>
+		</tr>
+	</thead>
+  <% @user.followeduser.each do |user| %>
+  <tbody>
+  <tr>
+    <td><%= attachment_image_tag(user, :profile_image, :fill, 50, 50, fallback: "no-image-mini.jpg") %></td>
+    <td>  <%= user.name %> </td>
+    <td>フォロー数:<%= user.followeruser.count %></td>
+    <td>フォロワー数:<%= user.followeduser.count %></td>
+    <td><%= link_to 'show', user_path(user) %></td>
+  </tr>
+  </tbody>
   <% end %>
+</table>
