--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,9 @@
 
     <div class="container">
       <p id="notice"><%= notice %></p>
+      <% if user_signed_in? %>
+        <%= render 'users/search', users: @users %>
+      <% end %>
       <%= yield %>
     </div>
     
