--- a/app/views/users/_search.html.erb
+++ b/app/views/users/_search.html.erb
@@ -1,6 +1,8 @@
 <!--<h1>User search</h1>-->
 <%= form_with url: search_users_path, method: :get, local: true do |f| %>
   <%= f.text_field :name %>
+  <%= f.select :model, {'User': 1, 'Book': 2} %>
+  <%= f.select :model, {'完全一致': 1, '前方一致': 2, '後方一致': 3, '部分一致': 4} %>
   <%= f.submit :search %>
 <% end %>
 <!--<table>-->
