--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
     <div class="container">
       <p id="notice"><%= notice %></p>
       <% if user_signed_in? %>
-        <%= render 'users/search', users: @users %>
+        <%= render 'layouts/search' %>
       <% end %>
       <%= yield %>
     </div>
