--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -23,25 +23,7 @@
 					</td>
 					<td><%= link_to @book.title, book_path(@book) %></td>
 					<td><%= @book.body %></td>
-					
-					<td>
-						<% if @book.favorited_by?(current_user) %>
-							<div>
-								<%= link_to book_favorites_path(@book), method: :delete do %>
-									<i class="fa fa-heart like-btn" aria-hidden="true" style="color: red;"></i>
-    								<%= @book.favorites.count %>
-								<% end %>
-							</div>
-						<% else %>
-							<div>
-								<%= link_to book_favorites_path(@book), method: :post do %>
-    								<i class="fa fa-heart-o" aria-hidden="true"></i>
-    								<%= @book.favorites.count %>
-								<% end %>
-							</div>
-						<% end %>
-					</td>
-					
+					<td><%= render 'favorites/favorites', book: @book %></td>
 					<td>コメント数:<%= @book.book_comments.count %></td>
 					<% if @user.id == current_user.id %>
               		<td><%= link_to "Edit", edit_book_path(@book), class: "btn-sm btn-success edit_book_#{@book.id}" %></td>
