--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -23,7 +23,7 @@
 					</td>
 					<td><%= link_to @book.title, book_path(@book) %></td>
 					<td><%= @book.body %></td>
-					<td><%= render 'favorites/favorites', book: @book %></td>
+					<td id="book_<%= @book.id %>"><%= render 'favorites/favorites', book: @book %></td>
 					<td>コメント数:<%= @book.book_comments.count %></td>
 					<% if @user.id == current_user.id %>
               		<td><%= link_to "Edit", edit_book_path(@book), class: "btn-sm btn-success edit_book_#{@book.id}" %></td>
@@ -31,22 +31,7 @@
             		<% end %>
 				</tr>
 		</table>
-		
-		<% @book_comments.each do |book_comment| %>
-			<div class="row">
-				<div class = "col-xs-9">
-					<%= book_comment.comment %>
-				</div>
-				<div class = "col-xs-3">
-	       			<% if book_comment.user == current_user %>
-	        			<div>
-	            			<%= link_to "Destroy", book_book_comment_path(book_comment.book, book_comment), method: :delete, class: "btn btn-danger pull-right" %>
-	        			</div>
-	        		<% end %>
-	        	</div>
-	        </div>
-        <% end %>
-          	
+		<%= render 'book_comments/book_comments', book_comments: @book_comments %>
 		<%= form_with(model:[@book, @book_comment], local: true) do |f| %>
   		<!--<div class="row">-->
     		<div class="col-sm-12">
