--- a/app/views/favorites/_favorites.html.erb
+++ b/app/views/favorites/_favorites.html.erb
@@ -1,20 +1,15 @@
-						<!--<td>-->
 						<% if book.favorited_by?(current_user) %>
 							<div>
-								<%= link_to book_favorites_path(book), method: :delete do %>
+								<%= link_to book_favorites_path(book), method: :delete, remote: true do %>
 									<i class="fa fa-heart" aria-hidden="true" style="color: red;"></i>
     								<%= book.favorites.count %>
 								<% end %>
 							</div>
 						<% else %>
 							<div>
-								<%= link_to book_favorites_path(book), method: :post do %>
+								<%= link_to book_favorites_path(book), method: :post, remote: true do %>
     								<i class="fa fa-heart-o" aria-hidden="true"></i>
     								<%= book.favorites.count %>
 								<% end %>
 							</div>
 						<% end %>
-						<!--</td>-->
-						
-						
-						
