--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -32,7 +32,7 @@
 						</td>
 						<td><%= link_to book.title, book_path(book), class: "book_#{book.id}" %></td>
 						<td><%= book.body %></td>
-						<td><%= render 'favorites/favorites', book: book %></td>
+						<td id="book_<%= book.id %>"><%= render 'favorites/favorites', book: book %></td>
 						<td>コメント数:<%= book.book_comments.count %></td>
 					</tr>
 				<% end %>
