--- a/app/views/book_comments/destroy.js.erb
+++ b/app/views/book_comments/destroy.js.erb
@@ -1,1 +1,1 @@
-$("#book_comment_<%= @book_comment.id %>").html("<%= j(render 'book_comments/book_comments',  book_comments: @book.book_comments ) %>");
+$("#book_comment").html("<%= j(render 'book_comments/book_comments',  book_comments: @book.book_comments ) %>");
