--- a/app/views/book_comments/_book_comments.html.erb
+++ b/app/views/book_comments/_book_comments.html.erb
@@ -6,7 +6,7 @@
 				<div class = "col-xs-3">
 	       			<% if book_comment.user == current_user %>
 	        			<div>
-	            			<%= link_to "Destroy", book_book_comment_path(book_comment.book, book_comment), method: :delete, class: "btn btn-danger pull-right" %>
+	            			<%= link_to "Destroy", book_book_comment_path(book_comment.book, book_comment), method: :delete, remote: true, class: "btn btn-danger pull-right" %>
 	        			</div>
 	        		<% end %>
 	        	</div>
